--- a/snippet_share_project/snip_app/templates/base.html
+++ b/snippet_share_project/snip_app/templates/base.html
@@ -10,7 +10,7 @@
     href="https://dl1.cbsistatic.com/i/2017/07/19/3220a58c-6cff-4be7-b5c2-0454cda385ea/9496cda6505b902811c5d624d015142b/imgingest-6105450939954122206.png"
     type="image/x-icon">
   <link href="{% static 'css/prism.css' %}" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
