--- a/snippet_share_project/snip_app/templates/base.html
+++ b/snippet_share_project/snip_app/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SnipBoard</title>
   <link rel="shortcut icon"
-    href="https://dl1.cbsistatic.com/i/2017/07/19/3220a58c-6cff-4be7-b5c2-0454cda385ea/9496cda6505b902811c5d624d015142b/imgingest-6105450939954122206.png"
+    href="https://icons.iconarchive.com/icons/thehoth/seo/256/seo-web-code-icon.png"
     type="image/x-icon">
   <link href="{% static 'css/prism.css' %}" rel="stylesheet" />
   <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
@@ -95,7 +95,7 @@
 
             <a class="panel-block" href="{% url 'index'%}p/{{i.link_code}}">
               <span class="panel-icon is-left">
-                <i class="fas fa-book" aria-hidden="true"></i>
+                <i class="fas fa-laptop-code">&nbsp; &nbsp;</i>
               </span>{{i.title}}
             </a>
             {% endfor %}
