--- a/snippet_share_project/snip_app/templates/detail.html
+++ b/snippet_share_project/snip_app/templates/detail.html
@@ -8,7 +8,7 @@
     <div>
         <b>Paste URL:</b> <a href="{{ request.build_absolute_uri }}">"{{ request.build_absolute_uri }}"</a>
     </div>
-    <pre><code class="language-{{snip.lang}} line-numbers">{{snip.text}}</code></pre>
+    <pre data-download-link><code class="language-{{snip.lang}} line-numbers">{{snip.text}}</code></pre>
 
 </div>
 
