--- a/snippet_share_project/snip_app/templates/all.html
+++ b/snippet_share_project/snip_app/templates/all.html
@@ -2,5 +2,31 @@
 {% load static %}
 {% block content %}
 
+{% for i in snips %}
+<div class="card" style="margin-bottom: 15px;">
+  <header class="card-header">
+    <p class="card-header-title">
+      {{i.link_code}}
+    </p>
+    <a href="{% url 'show_snips' i.link_code %}" class="card-header-icon" aria-label="more options">
+      <span class="icon">
+        <i class="fas fa-angle-right" aria-hidden="true"></i>
+      </span>
+    </a>
+  </header>
+  <div class="card-content">
+    <div class="content">
+      <pre style="  overflow: hidden;
+      max-height: 25ch;"><code class="language-{{i.lang}} line-numbers">{{i.text}}</code></pre>
+      <time datetime="2016-1-1">{{i.updated_at}}</time>
+    </div>
+  </div>
+  <!-- <footer class="card-footer">
+    <a href="#" class="card-footer-item">Save</a>
+    <a href="#" class="card-footer-item">Edit</a>
+    <a href="#" class="card-footer-item">Delete</a>
+  </footer> -->
+</div>
+{% endfor %}
 
 {% endblock %}
