--- a/snippet_share_project/snip_app/templates/all.html
+++ b/snippet_share_project/snip_app/templates/all.html
@@ -2,7 +2,18 @@
 {% load static %}
 {% block content %}
 
+<figure class="image is-2by2" style="margin-top: -100px">
+  <img src="https://cdn.dribbble.com/users/1512427/screenshots/6201637/02.png">
+</figure>
+
+
 {% for i in snips %}
+
+<style>
+  .image{
+    display: none;
+  }
+</style>
 <div class="card" style="margin-bottom: 15px;">
   <header class="card-header">
     <p class="card-header-title">
