--- a/snippet_share_project/snip_app/templates/base.html
+++ b/snippet_share_project/snip_app/templates/base.html
@@ -74,7 +74,7 @@
 
 
       <div class="columns">
-        <div class="column is-three-quarters">
+        <div class="column is-three-quarters main">
           <div class="container">
             <div class="is-block">
               {% block content %}
