--- a/snippet_share_project/fileupload/templates/fileupload/upload_form.html
+++ b/snippet_share_project/fileupload/templates/fileupload/upload_form.html
@@ -7,19 +7,26 @@
     }
 </style>
         <link href="{% static 'fileupload/css/dropzone.css' %}" type="text/css" rel="stylesheet"/>
-    </head>
-    <body>
+        <div class="notification is-warning" onclick="myFunction()" id="error" style="font-weight: 500; border-radius: 10px;">
+            <button class="delete"></button>
+          To share the uploaded files, use url "https://snip-share.herokuapp.com/media/uploads/&lt;filename&gt;"
+          </div>
+
+          <script>
+            function myFunction() {
+            var x = document.getElementById("error");
+            if (x.style.display === "none") {
+              x.style.display = "block";
+            } else {
+              x.style.display = "none";
+            }
+          }
+          </script>
         <form class="dropzone" action="{% url 'home' %}" method="post" enctype="multipart/form-data" style="height: 80vh; width: 40vw; margin-left: auto; margin-right: auto; background-image: url('https://cdn.dribbble.com/users/351759/screenshots/7118797/media/d3ceb84a853d4f608e897f70abcfce87.jpg'); background-size: cover; background-position: center;">
             {% csrf_token %}
             <div class="fallback">
                 <input name="file" type="file"/>
             </div>
-            <!-- <button class="button is-info is-large" style="display: inline; border-radius: 50%;"><i class="fas fa-angle-right" aria-hidden="true" type="submit"></i></button> -->
         </form>
-
-        <!-- <div class="main">
-            <pre data-src="{{name}}"><code class="line-numbers"></code></pre>
-        </div> -->
-
         <script src="{% static 'fileupload/js/dropzone.js' %}"></script>
         {% endblock %}
